--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -13,7 +13,6 @@ src/gcm-calibrate-dialog.c
 src/gcm-calibrate-manual.c
 src/gcm-cell-renderer-profile.c
 src/gcm-client.c
-src/gcm-colorimeter.c
 src/gcm-device-xrandr.c
 src/gcm-dump-edid.c
 src/gcm-dump-profile.c
@@ -25,6 +24,7 @@ src/gcm-picker.c
 src/gcm-viewer.c
 src/gcm-session.c
 src/gcm-utils.c
+libcolor-glib/gcm-sensor-client.c
 libcolor-glib/gcm-profile.c
 [type: gettext/glade]data/gcm-calibrate.ui
 [type: gettext/glade]data/gcm-picker.ui
