--- a/libcolor-glib/libcolor-glib.pc.in
+++ b/libcolor-glib/libcolor-glib.pc.in
@@ -7,6 +7,6 @@ Name: libcolor-glib
 Description: libcolor-glib is a userspace color library.
 Version: @VERSION@
 Requires.private: gthread-2.0
-Requires: glib-2.0, gobject-2.0, libusb-1.0 lcms2
+Requires: glib-2.0, gobject-2.0, libusb-1.0 lcms2 gudev-1.0
 Libs: -L${libdir} -llibcolor-glib
 Cflags: -I${includedir}/libcolor-glib
