trivial: Split out the color routines as a seporate file

--- a/libcolor-glib/Makefile.am
+++ b/libcolor-glib/Makefile.am
@@ -33,6 +33,7 @@ libcolor_glib_includedir = $(includedir)/libcolor-glib
 libcolor_glib_include_HEADERS =					\
 	libcolor-glib.h						\
 	gcm-common.h						\
+	gcm-color.h						\
 	gcm-ddc-client.h					\
 	gcm-ddc-device.h					\
 	gcm-ddc-control.h					\
@@ -55,6 +56,8 @@ libcolor_glib_la_SOURCES =					\
 	egg-debug.h						\
 	gcm-common.c						\
 	gcm-common.h						\
+	gcm-color.c						\
+	gcm-color.h						\
 	gcm-sensor.c						\
 	gcm-sensor.h						\
 	gcm-sensor-client.c					\
