cm: add a GcmSensorColormunki that currently doesn't do very much

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -372,6 +372,8 @@ install-data-hook:
 	fi
 
 gcm_sensor_example_SOURCES =				\
+	gcm-sensor-colormunki.c				\
+	gcm-sensor-colormunki.h				\
 	gcm-sensor-example.c
 
 gcm_sensor_example_LDADD =				\
