Add GcmUsb, a simple object to integrate libusb-1 with the GLib event loop

--- a/libcolor-glib/Makefile.am
+++ b/libcolor-glib/Makefile.am
@@ -90,6 +90,8 @@ libcolor_glib_la_SOURCES =					\
 	gcm-enum.h						\
 	gcm-xyz.c						\
 	gcm-xyz.h						\
+	gcm-usb.c						\
+	gcm-usb.h						\
 	gcm-profile-store.c					\
 	gcm-profile-store.h					\
 	gcm-xserver.c						\
