trivial: Apply a metric truckload of gtk-doc additions and updates

--- a/libcolor-glib/gcm-version.h.in
+++ b/libcolor-glib/gcm-version.h.in
@@ -19,6 +19,13 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
+/**
+ * SECTION:gcm-version
+ * @short_description: Simple versioning helper macros.
+ *
+ * Simple versioning helper macros.
+ */
+
 #if !defined (__LIBCOLOR_GLIB_H_INSIDE__) && !defined (LIBCOLOR_GLIB_COMPILATION)
 #error "Only <libcolor-glib.h> can be included directly."
 #endif
