Allow the end user to disable -WError
Signed-off-by: Richard Hughes <richard@hughsie.com>

--- a/configure.ac
+++ b/configure.ac
@@ -51,7 +51,7 @@ LT_INIT
 AM_PROG_CC_C_O
 IT_PROG_INTLTOOL([0.35.0])
 
-GNOME_COMPILE_WARNINGS
+GNOME_COMPILE_WARNINGS(error)
 GNOME_DOC_INIT
 
 # set up gtk-doc
@@ -91,7 +91,6 @@ CPPFLAGS="$CPPFLAGS -DGSEAL_ENABLE"
 
 if test "$GCC" = "yes"; then
 	WARNINGFLAGS_C="$WARNINGFLAGS_C -Wall"
-	WARNINGFLAGS_C="$WARNINGFLAGS_C -Werror"
 	WARNINGFLAGS_C="$WARNINGFLAGS_C -Wcast-align -Wno-uninitialized"
 	WARNINGFLAGS_C="$WARNINGFLAGS_C -Wmissing-declarations"
 #	WARNINGFLAGS_C="$WARNINGFLAGS_C -Wredundant-decls"
