Add gcm-compat.h to deal with unreleases versions of libusb

--- a/configure.ac
+++ b/configure.ac
@@ -141,7 +141,12 @@ PKG_CHECK_MODULES(GUDEV, gudev-1.0)
 PKG_CHECK_MODULES(LCMS, lcms2)
 PKG_CHECK_MODULES(X11, x11)
 PKG_CHECK_MODULES(SETTINGS_DAEMON, gnome-settings-daemon)
-PKG_CHECK_MODULES(USB, [libusb-1.0 >= 1.0.0])
+PKG_CHECK_MODULES(USB, libusb-1.0 >= 1.0.8, has_new_libusb=yes, has_new_libusb=no)
+if test x$has_new_libusb = xyes; then
+	AC_DEFINE(HAVE_NEW_USB,1,[Got new libusb])
+else
+	PKG_CHECK_MODULES(USB, libusb-1.0 >= 1.0.0)
+fi
 
 dnl Required for the properties window
 PKG_CHECK_MODULES(CONTROL_CENTER, [
@@ -340,6 +345,7 @@ echo "
         SANE support:              ${enable_sane}
         RAW support:               ${enable_exiv}
         VTE support:               ${has_vte}
+        New LIBUSB:                ${has_new_libusb}
         building unit tests:       ${enable_tests}
 "
 
