huey: add a program gcm-dump-to-values to discover new values in the register space

--- a/docs/huey/Makefile.am
+++ b/docs/huey/Makefile.am
@@ -1,17 +1,32 @@
-## We require new-style dependency handling.
-AUTOMAKE_OPTIONS = 1.7
-
-INCLUDES =						\
+INCLUDES =							\
+	-I$(top_srcdir)/libcolor-glib				\
+	-DI_KNOW_THE_LIBCOLOR_GLIB_API_IS_SUBJECT_TO_CHANGE	\
+	$(GUDEV_CFLAGS)						\
+	$(GTK_CFLAGS)						\
 	$(GLIB_CFLAGS)
 
-bin_PROGRAMS =						\
-	gcm-parse-huey
+bin_PROGRAMS =							\
+	gcm-parse-huey						\
+	gcm-dump-to-values
 
-gcm_parse_huey_SOURCES =				\
+gcm_parse_huey_SOURCES =					\
 	gcm-parse-huey.c
 
-gcm_parse_huey_LDADD =					\
+gcm_parse_huey_LDADD =						\
 	$(GLIB_LIBS)
 
-gcm_parse_huey_CFLAGS =					\
+gcm_parse_huey_CFLAGS =						\
+	$(WARNINGFLAGS_C)
+
+gcm_dump_to_values_SOURCES =					\
+	gcm-dump-to-values.c
+
+COLOR_GLIB_LIBS =						\
+	$(top_builddir)/libcolor-glib/libcolor-glib.la
+
+gcm_dump_to_values_LDADD =					\
+	$(COLOR_GLIB_LIBS)					\
+	$(GLIB_LIBS)
+
+gcm_dump_to_values_CFLAGS =					\
 	$(WARNINGFLAGS_C)
