--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -91,6 +91,7 @@ gtk-update-icon-cache %{_datadir}/icons/hicolor &> /dev/null || :
 %defattr(-,root,root,-)
 %doc AUTHORS COPYING NEWS README
 /lib/udev/rules.d/*.rules
+/lib/udev/gcm-*
 %{_bindir}/gcm-*
 %{_libexecdir}/*
 %dir %{_datadir}/gnome-color-manager
