--- a/help/Makefile.am
+++ b/help/Makefile.am
@@ -16,5 +16,5 @@ DOC_FIGURES =					\
 	figures/gcm-set-default.png		\
 	figures/gcm-import.png
 
-DOC_LINGUAS = cs de es id ja ru zh_CN
+DOC_LINGUAS = cs de el es id ja ru zh_CN
 
