Re-release version 2.31.91

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,6 +4,7 @@ data/gcm-prefs.desktop.in
 data/gnome-color-manager.schemas.in
 policy/org.gnome.color.policy.in
 src/egg-debug.c
+src/gcm-apply.c
 src/gcm-calibrate-argyll.c
 src/gcm-calibrate.c
 src/gcm-calibrate-dialog.c
