--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -11,7 +11,7 @@ URL:       http://projects.gnome.org/gnome-color-manager/
 Source0:   http://download.gnome.org/sources/gnome-color-manager/2.31/%{name}-%{version}.tar.gz
 
 Requires:  color-filesystem >= 1-7
-equires:  gnome-icon-theme
+Requires:  gnome-icon-theme
 Requires:  shared-mime-info
 Requires:  shared-color-profiles
 Requires:  yelp
