trivial: do not install the huey reverse engineering tools

--- a/docs/huey/Makefile.am
+++ b/docs/huey/Makefile.am
@@ -5,7 +5,7 @@ INCLUDES =							\
 	$(GTK_CFLAGS)						\
 	$(GLIB_CFLAGS)
 
-bin_PROGRAMS =							\
+noinst_PROGRAMS =						\
 	gcm-parse-huey						\
 	gcm-dump-to-values
 
