huey: add a test program 'gcm-calculate-fudge' to find calibration parameters
The Vec3 found in the EEPROM is very similar to the dark offset, which I
always theorised was required. Just subtracting this from the raw RGB value
gives the wrong answer, and removing it after the calibration matrix is
even more wrong.

Using the values from argyll -v9 we can get the raw USB values. These can
be decoded (we know how) and compared against the argyll XYZ values.
By using two nested loops we can find the optimal value of pre and post
multipliers. This gives us the ideal pre-ratio of 1982, which seems
pretty random. 2000 makes more sense.

Using the new pre-and-post multipliers, and the dark calibration vector,
we can get within 0.8% of the argyll values. That's close enough for me,
it's late here and I'm tired.

--- a/docs/huey/Makefile.am
+++ b/docs/huey/Makefile.am
@@ -5,9 +5,23 @@ INCLUDES =							\
 	$(GTK_CFLAGS)						\
 	$(GLIB_CFLAGS)
 
+COLOR_GLIB_LIBS =						\
+	$(top_builddir)/libcolor-glib/libcolor-glib.la
+
 noinst_PROGRAMS =						\
 	gcm-parse-huey						\
+	gcm-calculate-fudge					\
 	gcm-dump-to-values
+
+gcm_calculate_fudge_SOURCES =					\
+	gcm-calculate-fudge.c
+
+gcm_calculate_fudge_LDADD =					\
+	$(COLOR_GLIB_LIBS)					\
+	$(GLIB_LIBS)
+
+gcm_calculate_fudge_CFLAGS =					\
+	$(WARNINGFLAGS_C)
 
 gcm_parse_huey_SOURCES =					\
 	gcm-parse-huey.c
@@ -20,9 +34,6 @@ gcm_parse_huey_CFLAGS =						\
 
 gcm_dump_to_values_SOURCES =					\
 	gcm-dump-to-values.c
-
-COLOR_GLIB_LIBS =						\
-	$(top_builddir)/libcolor-glib/libcolor-glib.la
 
 gcm_dump_to_values_LDADD =					\
 	$(COLOR_GLIB_LIBS)					\
