Add a QPcard 202 reference image
Signed-off-by: Richard Hughes <richard@hughsie.com>

--- a/data/targets/Makefile.am
+++ b/data/targets/Makefile.am
@@ -9,6 +9,7 @@ targets_DATA =					\
 	LaserSoftDCPro.png			\
 	i1_RGB_Scan_14.png			\
 	CMP_DT_003.png				\
+	QPcard_202.png				\
 	IT872.png
 
 EXTRA_DIST =					\
