--- a/data/gcm-import.desktop.in
+++ b/data/gcm-import.desktop.in
@@ -2,7 +2,7 @@
 Encoding=UTF-8
 _Name=ICC Profile Installer
 _Comment=Install ICC profiles
-Categories=System;X-Red-Hat-Base;X-Fedora;
+Categories=System;
 Exec=/usr/bin/gcm-import %F
 Terminal=false
 Type=Application
