Add the X-GNOME-Settings-Panel category so the control center panel is not in 'Other'

--- a/data/gcm-prefs.desktop.in
+++ b/data/gcm-prefs.desktop.in
@@ -6,7 +6,7 @@ Icon=gnome-color-manager
 Exec=gnome-control-center color
 Terminal=false
 Type=Application
-Categories=Settings;X-GNOME-SystemSettings;
+Categories=Settings;X-GNOME-SystemSettings;X-GNOME-Settings-Panel;
 StartupNotify=true
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-color-manager
