New French doc translation
Contributed by Laurent Coudeur <laurentc@iol.ie> and
Bruno Brouard <annoa.b@gmail.com>

--- a/help/Makefile.am
+++ b/help/Makefile.am
@@ -15,5 +15,5 @@ DOC_FIGURES =					\
 	figures/gcm-device-configure.png	\
 	figures/gcm-import.png
 
-DOC_LINGUAS = cs de es id ru
+DOC_LINGUAS = cs de es fr id ru
 
