Do not use a GtkInfoBox for the VCGT warning

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -238,6 +238,8 @@ libcolor_la_SOURCES =					\
 	cc-color-panel.h				\
 	gcm-cell-renderer-profile-text.c		\
 	gcm-cell-renderer-profile-text.h		\
+	gcm-cell-renderer-profile-icon.c		\
+	gcm-cell-renderer-profile-icon.h		\
 	$(libgcmshared_a_SOURCES)			\
 	$(NULL)
 
