--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -3,11 +3,11 @@ data/gcm-import.desktop.in
 data/gcm-prefs.desktop.in
 data/gcm-viewer.ui
 data/org.gnome.color-manager.gschema.xml
+libcolor-glib/gcm-debug.c
 libcolor-glib/gcm-profile.c
 libcolor-glib/gcm-sensor-client.c
 policy/org.gnome.color.policy.in
 src/cc-color-panel.c
-src/egg-debug.c
 src/gcm-apply.c
 src/gcm-calibrate-argyll.c
 src/gcm-calibrate.c
