--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,6 +4,7 @@ data/gcm-prefs.desktop.in
 data/gcm-viewer.desktop.in
 data/gcm-viewer.ui
 data/org.gnome.color-manager.gschema.xml
+data/org.gnome.settings-daemon.plugins.color.gschema.xml
 libcolor-glib/gcm-debug.c
 libcolor-glib/gcm-profile.c
 libcolor-glib/gcm-sensor-client.c
@@ -19,6 +20,7 @@ src/gcm-cell-renderer-profile-icon.c
 src/gcm-cell-renderer-profile-text.c
 src/gcm-client.c
 src/gcm-device-xrandr.c
+src/gcm-list-store-profiles.c
 src/gcm-import.c
 src/gcm-inspect.c
 src/gcm-install-system-wide.c
